# openjpeg-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  generate.sh
config/: opj_config.h  opj_config_private.h
src/: ffi.rs  lib.rs
