[package]
name = "openjpeg-sys"
description = "OpenJPEG (JPEG 2000) FFI bindings"
version = "1.0.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"
license = "BSD-2-Clause"
links = "openjpeg"
repository = "https://github.com/kornelski/openjpeg-sys"
homepage = "https://lib.rs/openjpeg-sys"
documentation = "https://docs.rs/openjpeg-sys"
readme = "README.md"
keywords = ["j2k", "jp2", "jpeg2000"]

[dependencies]
libc = "0.2.54"

[build-dependencies]
cc = "1.0.37"

[features]
parallel = ["cc/parallel"]
